--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,17 +1,19 @@
-$text-font: 'Open Sans';
+$text-font: 'Chivo', sans-serif;
 
 $color-light: #f2f2f2;
+$color-gray: #595959;
+
 $color-dark: #0d0d0d;
 
-$padding-top: 10rem;
+$padding-top: 8rem;
 
 $light: 300;
 $regular: 400;
-$bold: 600;
+$bold: 700;
 
-$title-size-mobile: 3rem;
 $title-size-desktop: 3rem;
 
+$title-size-mobile: 4rem;
 $subtitle-size-mobile: 2rem;
 $text-size-mobile: 1.5rem;
 
