--- a/client/src/components/shared/Navigation/MainHeader.scss
+++ b/client/src/components/shared/Navigation/MainHeader.scss
@@ -1,6 +1,8 @@
 @import '../../../styles/variables.scss';
 
 .main-header {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+
   width: 100%;
   height: $padding-top;
   display: flex;
