--- a/client/src/views/PhoneDetails.scss
+++ b/client/src/views/PhoneDetails.scss
@@ -1,17 +1,108 @@
 @import '../styles/variables.scss';
 
 .details {
-  padding-top: $padding-top;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  background: white;
+  position: relative;
 
   &__image {
     width: 100%;
+    margin: auto;
+
+    img {
+      width: 100%;
+    }
   }
 
-  &__name {
-    font-size: $title-size-mobile;
+  &__main {
+    padding: 2rem;
+    background: $color-gray;
+    color: $color-light;
+
+    &__name {
+      font-size: $title-size-mobile;
+      text-transform: uppercase;
+    }
+
+    &__manufacturer {
+      font-size: $subtitle-size-mobile;
+      text-transform: uppercase;
+    }
+
+    &__description {
+      margin-top: 2rem;
+      font-size: $text-size-mobile;
+    }
   }
 
-  &__description {
-    font-size: $text-size-mobile;
+  &__specs {
+    padding: 2rem;
+    background: $color-light;
+    &__title {
+      font-size: $title-size-mobile;
+      text-transform: uppercase;
+    }
+    &__subtitle {
+      text-transform: uppercase;
+      font-size: $subtitle-size-mobile;
+      margin-top: 2rem;
+      color: $color-gray;
+    }
+    &__description {
+      font-size: $text-size-mobile;
+    }
+  }
+}
+
+.back {
+  width: 100%;
+  &__btn {
+    width: 100%;
+    text-align: left;
+  }
+}
+
+@media (min-width: $display-tablet) {
+  .details {
+    grid-template-columns: 1fr [de] 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: 'details__image details__image details__specs' 'details__image details__image details__specs' 'details__main details__main details__main';
+    margin: 5rem 10rem;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+
+    &__image {
+      grid-area: details__image;
+    }
+
+    &__main {
+      grid-area: details__main;
+    }
+
+    &__specs {
+      grid-area: details__specs;
+    }
+  }
+}
+
+@media (min-width: $display-desktop) {
+  .details {
+    grid-template-columns: 1.5fr [de] 2fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 'details__main details__image details__specs';
+    margin: 15rem;
+
+    &__image {
+      grid-area: details__image;
+    }
+
+    &__main {
+      grid-area: details__main;
+    }
+
+    &__specs {
+      grid-area: details__specs;
+    }
   }
 }
