--- a/client/src/views/PhoneDetails.scss
+++ b/client/src/views/PhoneDetails.scss
@@ -58,9 +58,18 @@
 
 .back {
   width: 100%;
+  padding: 1rem;
+  font-size: $text-size-mobile;
+  background: $color-dark;
+
   &__btn {
     width: 100%;
     text-align: left;
+    color: $color-light;
+  }
+
+  &__icon {
+    margin-right: 1rem;
   }
 }
 
@@ -69,8 +78,6 @@
     grid-template-columns: 1fr [de] 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas: 'details__image details__image details__specs' 'details__image details__image details__specs' 'details__main details__main details__main';
-    margin: 5rem 10rem;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 
     &__image {
       grid-area: details__image;
@@ -91,7 +98,6 @@
     grid-template-columns: 1.5fr [de] 2fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'details__main details__image details__specs';
-    margin: 15rem;
 
     &__image {
       grid-area: details__image;
