organized sass styles

--- a/client/src/components/shared/Navigation/MainNavigation.scss
+++ b/client/src/components/shared/Navigation/MainNavigation.scss
@@ -5,7 +5,7 @@
     color: $color-dark;
     font-size: $subtitle-size-mobile;
     text-transform: uppercase;
-    letter-spacing: 0.5rem;
+    font-weight: $bold;
   }
 
   &__header-nav {
