--- a/client/src/components/Phone/PhoneItem.scss
+++ b/client/src/components/Phone/PhoneItem.scss
@@ -4,16 +4,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2rem;
+  padding: $padding-mobile;
   background: white;
   align-items: center;
 
-  &__top {
+  &__name {
     color: $color-dark;
     text-align: center;
     text-transform: uppercase;
 
-    &__name {
+    &__text {
       font-size: $title-size-mobile;
     }
   }
@@ -27,8 +27,8 @@
     }
   }
 
-  &__bottom {
-    &__manufacturer {
+  &__manufacturer {
+    &__text {
       font-size: $subtitle-size-mobile;
       text-transform: uppercase;
     }
