--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,8 +1,8 @@
 $text-font: 'Chivo', sans-serif;
 
 $color-light: #f2f2f2;
-$color-gray: #595959;
-
+$color-light-gray: #595959;
+$color-dark-gray: #262626;
 $color-dark: #0d0d0d;
 
 $padding-top: 8rem;
@@ -11,11 +11,15 @@ $light: 300;
 $regular: 400;
 $bold: 700;
 
-$title-size-desktop: 3rem;
+$title-size-desktop: 4rem;
+$subtitle-size-desktop: 3rem;
+$text-size-desktop: 2rem;
+$padding-desktop: 4rem;
 
-$title-size-mobile: 4rem;
+$title-size-mobile: 3rem;
 $subtitle-size-mobile: 2rem;
 $text-size-mobile: 1.5rem;
+$padding-mobile: 2rem;
 
 $body-width: 90%;
 
@@ -25,6 +29,8 @@ $line-space: 2;
 $display-mobile: 425px;
 $display-tablet: 768px;
 $display-desktop: 1024px;
+
+$main-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
 // #F2F2F2
 // #A6A6A6
