--- a/client/src/views/PhoneList.scss
+++ b/client/src/views/PhoneList.scss
@@ -5,7 +5,7 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
 
   &__item {
     flex: 0 0 100%;
